--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -2,8 +2,8 @@
 const { title, description, image } = Astro.props;
 ---
 
-<div class="max-w-xs rounded overflow-hidden shadow-lg bg-green-100 m-4">
-  <img class="w-full p-4 rounded" src={image} alt={title} />
+<div class="max-w-xs rounded-lg overflow-hidden shadow-lg bg-green-100 m-4 hover:shadow-lg transition-all duration-200 ease-in-out hover:scale-100 scale-90 gap-x-2 opacity-90 hover:opacity-100">
+  <img class="w-full h-96 object-cover p-4" src={image} alt={title} />
   <div class="px-6 py-1">
       <div class="font-bold text-xl mb-2 text-black-700">{title}</div>
   </div>
