--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,22 +8,27 @@ import Cards from '../components/Cards.astro'
 <Layout title="Mystic Nails">
 	<main>
 		<Header />
-
-		<Cards 
-			title="Mis Diseños"
-			description=""
-			image="/src/images/Diseños.jpg"
-		/>
-		<Cards 
-			title="Mis Diseños"
-			description=""
-			image="/src/images/Diseños.jpg"
-		/>
-		<Cards 
-			title="Mis Diseños"
-			description=""
-			image="/src/images/Diseños.jpg"
-		/>
+		<div class="flex justify-center">
+			<div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+				<a href="./diseños">
+					<Cards
+					title="Mis Diseños"
+					description=""
+					image="/src/images/diseño-verde.jpg"
+				/>
+				</a>
+				<Cards 
+					title="Técnicas"
+					description=""
+					image="/src/images/Tecnicas.jpeg"
+				/>
+				<Cards 
+					title="Reservas"
+					description=""
+					image="/src/images/calendario-verde.webp"
+				/>
+			</div>
+		</div>
 	</main>
 </Layout>
 
