--- a/src/pages/diseños.astro
+++ b/src/pages/diseños.astro
@@ -1,13 +1,64 @@
 ---
+import Cards from '../components/Cards.astro';
 import Header from '../components/Header.astro';
-import Posts from '../components/Posts.astro';
+import Images from '../components/Images.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='Mis Diseños'>
     <a href="/">
         <Header />
-        <Posts />
     </a>
-
+    <div class="flex justify-center">
+        <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+            <Images
+            image = "/src/images/Diseños/Diseño6.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño2.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño9.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño10.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño5.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño1.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño7.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño8.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño3.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño4.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño11.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño12.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño13.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño14.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño15.jpg"
+            />
+            <Images
+            image = "/src/images/Diseños/Diseño16.jpg"
+            />
+        </div>
+    </div>
 </Layout>
