--- a/src/pages/tecnicas.astro
+++ b/src/pages/tecnicas.astro
@@ -1,9 +1,9 @@
 ---
-import Header from "../components/Header.astro"
 import Layout from "../layouts/Layout.astro"
+import Header from "../components/Header.astro"
 ---
 
-<Layout title="reservas">
+<Layout title="Tecnicas">
     <main>
         <a href="/">
             <Header />
