--- a/src/pages/reservas.astro
+++ b/src/pages/reservas.astro
@@ -8,5 +8,29 @@ import Layout from "../layouts/Layout.astro"
         <a href="/">
             <Header />
         </a>
+        <body class="bg-gray-100 p-6">
+            <div class="container mx-auto">
+              <h1 class="text-4xl font-sans text-center mb-4 mt-8">Reservar una Cita</h1>
+              <div class="max-w-md mx-auto bg-white p-8 rounded-lg shadow-md">
+                <form id="reservationForm">
+                  <div class="mb-4">
+                    <label for="name" class="block text-gray-700 font-bold mb-2">Nombre y Apellido</label>
+                    <input type="text" id="name" class="w-full px-3 py-2 border rounded-lg" required>
+                  </div>
+                  <div class="mb-4">
+                    <label for="date" class="block text-gray-700 font-bold mb-2">Fecha</label>
+                    <input type="date" id="date" class="w-full px-3 py-2 border rounded-lg" required>
+                  </div>
+                  <div class="mb-4">
+                    <label for="time" class="block text-gray-700 font-bold mb-2">Hora</label>
+                    <input type="time" id="time" class="w-full px-3 py-2 border rounded-lg" required>
+                  </div>
+                  <button type="submit" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700">Reservar</button>
+                </form>
+              </div>
+            </div>
+          
+            <script type="module" src="/src/scripts/reservation.js"></script>
+          </body>
     </main>
 </Layout>
